@@ -821,10 +821,11 @@ class TestcaseGenerator(Tool.Tool):
         if self.generated_events:
             while randint(0,5) == 1:
                 e_h = choice(self.generated_events)
-                ref = RelLib.EventRef()
-                self.fill_object( ref)
-                ref.set_reference_handle(e_h)
-                ref.set_role( self.rand_type(Utils.event_roles))
+                eref = RelLib.EventRef()
+                self.fill_object( eref)
+                eref.set_reference_handle(e_h)
+                eref.set_role( self.rand_type(Utils.event_roles))
+                np.add_event_ref(eref)
         
         person_handle = self.db.add_person(np,self.trans)
         
@@ -1050,9 +1051,9 @@ class TestcaseGenerator(Tool.Tool):
 
         if isinstance(o,RelLib.ChildRef):
             if randint(0,3) == 1:
-                o.set_mother_relation( self.rand_type( Utils.child_relations))
+                o.set_mother_relation( self.rand_type( RelLib.ChildRefType()))
             if randint(0,3) == 1:
-                o.set_father_relation( self.rand_type( Utils.child_relations))
+                o.set_father_relation( self.rand_type( RelLib.ChildRefType()))
 
         if issubclass(o.__class__,RelLib._DateBase.DateBase):
             if randint(0,1) == 1:
@@ -1113,6 +1114,9 @@ class TestcaseGenerator(Tool.Tool):
             if randint(0,1) == 1:
                 o.set_rectangle( (randint(0,200),randint(0,200),randint(0,200),randint(0,200)))
         
+        if isinstance(o,RelLib.Name):
+            o.set_type( self.rand_type( RelLib.NameType()))
+
         if issubclass(o.__class__,RelLib._NoteBase.NoteBase):
             o.set_note( self.rand_text(self.NOTE))
             o.set_note_format( choice( (True,False)))
@@ -1233,11 +1237,21 @@ class TestcaseGenerator(Tool.Tool):
         return (year, event_ref)
     
     def rand_type( self, list):
-        key = choice(list.keys())
-        value = list[key]
-        if value == _("Custom"):
-            value = self.rand_text(self.SHORT)
-        return( (key,value))
+        if type(list) == dict:
+            key = choice(list.keys())
+            value = list[key]
+            if value == _("Custom"):
+                value = self.rand_text(self.SHORT)
+            return( (key,value))
+        elif  issubclass( list.__class__, RelLib.GrampsType):
+            map = list.get_map()
+            key = choice( map.keys())
+            if key == list.get_custom():
+                value = self.rand_text(self.SHORT)
+            else:
+                value = ''
+            list.set( (key,value))
+            return list
         
     def rand_place( self):
         if not self.generated_places or randint(0,10) == 1:
@@ -1306,7 +1320,7 @@ class TestcaseGenerator(Tool.Tool):
                 maxsyllables = 3
 
         if type == self.NOTE:
-            result = result + "Geberated by TestcaseGenerator."
+            result = result + "Generated by TestcaseGenerator."
             minwords = 20
             maxwords = 100
 
